@@ -1,3 +1,15 @@
+2005-03-03  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/shadow.c (xnshadow_unmap): Check task pointer value
+	earlier.
+
+	* nucleus/thread.c (xnthread_init): Init the TCB so that its
+	fields are set to known invalid values.
+
+	* testsuite/klatency/latency-module.c (__latency_init): Rename the
+	sampling thread to "ksampling" so that we can start both kernel
+	and user-space latency tests concurrently.
+
 2005-03-01  Philippe Gerum  <rpm@xenomai.org>
 
 	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c5.
